--- a/sipack/siSecServer/src/main/resources/templates/header.html
+++ b/sipack/siSecServer/src/main/resources/templates/header.html
@@ -6,6 +6,8 @@
 <script type="text/javascript" th:src="@{js/jquery.serializejson.js}"></script>
 <script type="text/javascript" th:src="@{js/common.js}"></script>
 <script type="text/javascript" th:src="@{js/jquery.cookie.js}"></script>
+<script type="text/javascript" src="https://cdn.bootcss.com/vue/2.2.2/vue.min.js"></script>
+
 
 <!-- <link  rel="stylesheet" type="text/css" th:href="@{css/style.css}"/> -->
 </head>
